--- a/final/server/package.json
+++ b/final/server/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "apollo-server": "2.19.1",
-    "graphql": "15.4.0"
+    "graphql": "15.4.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
