--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "castronauts-server-complete",
+  "name": "catstronauts-server",
   "version": "1.0.0",
-  "description": "back-end demo app for Apollo's lift-off course",
+  "description": "back-end demo app for Apollo's lift-off II course",
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index"
   },
   "dependencies": {
-    "apollo-server": "2.19.1",
-    "graphql": "15.4.0"
+    "apollo-server": "^3.0.0",
+    "graphql": "^15.5.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
