--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@reach/router": "^1.3.4",
+    "apollo-datasource-rest": "^3.6.1",
     "framer-motion": "^4.1.17",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
