feat: add Query to get tracksForHome data using node-fetch instead of RESTDataSource

--- a/final/server/package.json
+++ b/final/server/package.json
@@ -10,7 +10,8 @@
     "@apollo/datasource-rest": "^4.3.2",
     "@apollo/server": "^4.0.0",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
