--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "catstronauts-server",
+  "name": "catstronauts-server-complete",
   "version": "1.0.0",
-  "description": "back-end demo app for Apollo's lift-off II course",
+  "description": "back-end demo app for Apollo's lift-off course",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index"
-  },
-  "dependencies": {
-    "@apollo/server": "^4.5.0",
-    "@graphql-tools/mock": "^8.7.6",
-    "@graphql-tools/schema": "^9.0.4",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "compile": "tsc",
+    "start": "npm run compile && nodemon ./dist/index.js"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
+    "dotenv": "^8.6.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^5.1.3"
   },
   "author": "Raphael Terrier @R4ph-t",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@apollo/server": "^4.7.4",
+    "@graphql-tools/mock": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6"
+  }
 }
