--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "catstronauts-client",
   "version": "1.0.0",
   "private": true,
-  "description": "front-end demo app for Apollo's lift-off course",
+  "description": "front-end demo app for Apollo's lift-off II course",
   "dependencies": {
     "@apollo/client": "^3.7.15",
     "@apollo/space-kit": "^9.3.1",
