--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "catstronauts-server-complete",
+  "name": "catstronauts-server",
   "version": "1.0.0",
-  "description": "back-end demo app for Apollo's lift-off course",
+  "description": "back-end demo app for Apollo's lift-off II course",
   "main": "src/index.js",
   "scripts": {
     "compile": "tsc",
