--- a/final/client/package.json
+++ b/final/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catstronauts-client-complete",
+  "name": "catstronauts-client",
   "version": "1.0.0",
   "private": true,
   "description": "front-end demo app for Apollo's lift-off II course",
@@ -11,7 +11,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
-    "graphql": "^15.3.0",
+    "graphql": "^16.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-emotion": "^10.0.0",
@@ -22,7 +22,8 @@
   "scripts": {
     "test": "vitest",
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "generate": "graphql-codegen"
   },
   "browserslist": {
     "production": [
@@ -37,9 +38,17 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "^4.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5.1.3",
     "@vitejs/plugin-react": "^4.0.1",
     "@vitest/ui": "^0.32.2",
     "happy-dom": "^9.20.3",
