--- a/final/server/package.json
+++ b/final/server/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "catstronauts-server-complete",
+  "name": "catstronauts-server",
   "version": "1.0.0",
   "description": "back-end demo app for Apollo's lift-off II course",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index"
-  },
-  "dependencies": {
-    "@apollo/datasource-rest": "^5.0.2",
-    "@apollo/server": "^4.5.0",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "compile": "tsc",
+    "start": "npm run compile && nodemon ./dist/index.js",
+    "generate": "graphql-codegen"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "dotenv": "^8.6.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^5.1.3"
   },
   "author": "Raphael Terrier @R4ph-t",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@apollo/datasource-rest": "^6.0.1",
+    "@apollo/server": "^4.7.4",
+    "@graphql-tools/mock": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6"
+  }
 }
