--- a/final/server/package.json
+++ b/final/server/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "compile": "tsc",
+    "dev": "ts-node-dev --respawn ./src/index.ts",
     "start": "npm run compile && nodemon ./dist/index.js",
     "generate": "graphql-codegen"
   },
@@ -14,6 +15,7 @@
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "dotenv": "^8.6.0",
     "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "author": "Raphael Terrier @R4ph-t",
