--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,13 @@
   "main": "src/index.js",
   "scripts": {
     "compile": "tsc",
+    "dev": "ts-node-dev --respawn ./src/index.ts",
     "start": "npm run compile && nodemon ./dist/index.js"
   },
   "devDependencies": {
     "dotenv": "^8.6.0",
     "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "author": "Raphael Terrier @R4ph-t",
