--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.8.0"
   },
   "scripts": {
+    "postinstall": "npm run generate",
     "test": "vitest",
     "start": "vite",
     "build": "vite build",
