add auto postinstall generate command to package.json

--- a/final/server/package.json
+++ b/final/server/package.json
@@ -4,6 +4,7 @@
   "description": "back-end demo app for Apollo's lift-off II course",
   "main": "src/index.js",
   "scripts": {
+    "postinstall": "npm run generate",
     "compile": "tsc",
     "dev": "ts-node-dev --respawn ./src/index.ts",
     "start": "npm run compile && nodemon ./dist/index.js",
