--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
     "@apollo/server": "^4.5.0",
     "@graphql-tools/mock": "^8.7.6",
     "@graphql-tools/schema": "^9.0.4",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "jose": "^5.6.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
